--- a/package.json
+++ b/package.json
@@ -1,33 +1,15 @@
 {
-  "name": "angular2-quickstart",
+  "name": "ng2-interceptors",
   "version": "1.0.0",
-  "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "lite": "lite-server",
-    "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
-  },
   "license": "ISC",
+  "scripts": {
+    "build": "rm -rf lib && tsc -p src"
+  },
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.3",
-    "@angular/compiler":  "2.0.0-rc.3",
-    "@angular/core":  "2.0.0-rc.3",
-    "@angular/http":  "2.0.0-rc.3",
-    "@angular/platform-browser":  "2.0.0-rc.3",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.3",
-    "systemjs": "0.19.27",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "bootstrap": "^3.3.6"
+    "@angular/http": "2.0.0-rc.3",
+    "rxjs": "5.0.0-beta.6"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings":"^1.0.4"
+    "typescript": "^1.8.10"
   }
 }
