--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
-  }
+    "noImplicitAny": false,
+    "outDir": "../lib",
+    "declaration": true
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
