--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rm -rf lib && tsc -p src"
   },
   "dependencies": {
-    "@angular/http": "2.0.0-rc.3",
+    "@angular/http": "^2.0.0-rc.6",
     "rxjs": "5.0.0-beta.6"
   },
   "devDependencies": {
