--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "ng2-interceptors",
   "version": "1.0.0",
+  "description": "Angular2 interceptor service implementation",
+  "keywords": [
+    "Angular 2",
+    "Interceptor"
+  ],
+  "author": {
+    "name": "Víctor Oliva",
+    "email": "olivarra1@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/voliva/angular2-interceptors"
+  },
+  "main": "index.js",
   "license": "ISC",
   "scripts": {
     "build": "rm -rf lib && tsc -p src"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@angular/http": "^2.0.0-rc.6",
     "rxjs": "5.0.0-beta.6"
   },
   "devDependencies": {
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "@angular/http": "^2.0.0-rc.6",
+    "rxjs": "5.0.0-beta.6"
   }
 }
