--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "build": "rm -rf lib && tsc -p src"
   },
   "peerDependencies": {
-    "@angular/http": "^2.0.0-rc.6",
-    "rxjs": "5.0.0-beta.6"
+    "@angular/core": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "rxjs": "5.0.0-beta.12"
   },
   "devDependencies": {
-    "typescript": "^1.8.10",
-    "@angular/http": "^2.0.0-rc.6",
-    "rxjs": "5.0.0-beta.6"
+    "@angular/core": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "rxjs": "^5.0.0-beta.12",
+    "typescript": "^1.8.10"
   }
 }
