--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "devDependencies": {
     "@angular/core": "^2.0.0",
     "@angular/http": "^2.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
     "rxjs": "^5.0.0-beta.12",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "zone.js": "^0.6.21"
   }
 }
