--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "peerDependencies": {
     "@angular/core": "^2.4.0",
     "@angular/http": "^2.4.0",
-    "rxjs": "5.0.0"
+    "rxjs": "^5.0.0"
   },
   "devDependencies": {
     "@angular/common": "^2.4.0",
